src/yini_test/cases/golden/strict/valid/disable-line/disable-line-basic.strict.yini
@yini strict

^ Application
--key = "val"
key = "kept"

/END

