src/yini_test/cases/golden/strict/invalid/keys/key-with-hyphen.strict.yini
@yini strict

^ Keys
my-key = "val"

/END
